--- a/src/app/components/settings/product/product-form/set-product-photo/set-product-photo.component.html
+++ b/src/app/components/settings/product/product-form/set-product-photo/set-product-photo.component.html
@@ -11,6 +11,6 @@
   <app-button
     [isDisabled]="isDisabledButton()"
     [label]="'set-product-photo-component.save' | translate"
-    (click)="submit()">
+    (onClick)="submit()">
   </app-button>
 </div>
