--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
-<div class="flex h-full gap-4">
+<div class="flex h-full gap-4 max-sm:flex-col">
   <app-menu-aside></app-menu-aside>
-  <div class="flex-auto overflow-hidden">
+  <div class="flex-auto">
     <router-outlet></router-outlet>
   </div>
 </div>
