--- a/src/app/components/shared/button/button.component.html
+++ b/src/app/components/shared/button/button.component.html
@@ -1,9 +1,13 @@
-<div class="flex justify-center">
-  <button class="p-2 border rounded-md {{ width() }} {{ initLayout() }}" [disabled]="isDisabled()">
+<div class="flex flex-col justify-center">
+  <button
+    class="flex-auto p-2 border rounded-md {{ initLayout() }}"
+    [disabled]="isDisabled()"
+    (click)="onClick.emit($event)">
     @if (isIcon()) {
       <app-icon [iconName]="label()"></app-icon>
     } @else {
-      {{ label() }}
+      <span class="text-nowrap">{{ label() }}</span>
     }
   </button>
+  <ng-content></ng-content>
 </div>
