--- a/src/app/components/shared/input-number/input-number.component.html
+++ b/src/app/components/shared/input-number/input-number.component.html
@@ -1,10 +1,12 @@
 <div class="relative pb-6">
-  <label class="block my-1">
-    {{ label() }}
-    @if (required()) {
-      <sup class="text-red-600">*</sup>
-    }
-  </label>
+  @if (label()) {
+    <label class="block my-1">
+      {{ label() }}
+      @if (required()) {
+        <sup class="text-red-600">*</sup>
+      }
+    </label>
+  }
   <input
     #input
     class="block border rounded-md p-2 w-full focus:border-blue-600 {{ errorCode() ? 'border-red-600' : '' }}"
