--- a/src/app/components/shared/modals/dialog-window/dialog-window.component.html
+++ b/src/app/components/shared/modals/dialog-window/dialog-window.component.html
@@ -1,5 +1,6 @@
 @if (isDialogActive()) {
-  <div class="flex justify-center items-center w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur">
+  <div
+    class="flex justify-center items-center w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur z-50">
     <div class="bg-white min-w-80 min-h-40 p-4">
       <div class="flex justify-end">
         <button (click)="this.onCloseDialog.emit(false)">
