--- a/src/app/components/settings/product-base/product-base-form/product-base-form.component.html
+++ b/src/app/components/settings/product-base/product-base-form/product-base-form.component.html
@@ -56,6 +56,9 @@
   [isDialogActive]="isDialogActive()"
   [title]="dialogTitle() | translate"
   (onCloseDialog)="closeDialog()">
-  <app-product-property-form [editParameter]="parameterToEdit()" (onSubmit)="submitProductParameter($event)">
+  <app-product-property-form
+    [editParameter]="parameterToEdit()"
+    [isDialogActive]="isDialogActive()"
+    (onSubmit)="submitProductParameter($event)">
   </app-product-property-form>
 </app-dialog-window>
