--- a/src/app/components/shared/add-product-to-purchase-list/add-product-to-purchase-list.component.html
+++ b/src/app/components/shared/add-product-to-purchase-list/add-product-to-purchase-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-72">
+<div class="flex flex-col w-72 bg-white">
   <div class="flex w-full justify-between pb-4 border-b">
     <span class="font-semibold"> {{ 'add-product-to-purchase-list-component.save-on-a-list' | translate }} </span>
     <button class="rounded-md hover:bg-gray-200" (click)="close()">
