--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -20,7 +20,7 @@
           (click)="changeMenu()">
         </app-icon>
       </div>
-      <div class="border-r border-b border-l rounded-b-md pb-4 overflow-auto">
+      <div class="border-r border-b border-l rounded-b-md pb-4 overflow-auto bg-white">
         @for (item of items(); track item.id) {
           <div class="flex items-center hover:bg-green-50">
             <a
