--- a/src/app/components/shared/input/input.component.html
+++ b/src/app/components/shared/input/input.component.html
@@ -9,7 +9,9 @@
   }
   <input
     #input
-    class="block border rounded-md p-2 w-full focus:border-blue-600 {{ errorCode() ? 'border-red-600' : '' }}"
+    class="block border rounded-md p-2 w-full focus:border-blue-600  bg-transparent {{
+      errorCode() ? 'border-red-600' : ''
+    }}"
     [placeholder]="placeholder()"
     [type]="type()"
     [value]="value()"
