--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-nav class="block max-w-364 mx-auto"></app-nav>
     </div>
   </header>
-  <main class="max-w-364 mx-auto">
+  <main class="max-w-364 mx-auto mt-4">
     <router-outlet></router-outlet>
   </main>
 </div>
