--- a/src/app/components/shared/input-plus-minus/input-plus-minus.component.html
+++ b/src/app/components/shared/input-plus-minus/input-plus-minus.component.html
@@ -2,7 +2,11 @@
   <button class="p-2 border-l border-y rounded-l border-green-300 hover:bg-green-300" (click)="reduce()">
     <app-icon [iconName]="IconType.minus"></app-icon>
   </button>
-  <input #input class="px-1 w-12 border border-green-300 text-center" [value]="value()" (input)="transform(input)" />
+  <input
+    #input
+    class="px-1 w-12 border border-green-300 text-center bg-transparent"
+    [value]="value()"
+    (input)="transform(input)" />
   <button class="p-2 border-y border-r rounded-r border-green-300 hover:bg-green-300" (click)="increase()">
     <app-icon [iconName]="IconType.plus"></app-icon>
   </button>
