--- a/src/app/modules/shop-module/components/settings/product-base/product-base-form/product-base-form.component.html
+++ b/src/app/modules/shop-module/components/settings/product-base/product-base-form/product-base-form.component.html
@@ -40,7 +40,7 @@
       [idName]="'index'"
       [isEditAction]="true"
       [isRemoveAction]="true"
-      [items]="productParameters()"
+      [items]="form.getRawValue().productParameters"
       (onButtonAction)="addParameter()"
       (onEditAction)="editParameter($event)"
       (onRemoveAction)="removeParamter($event)">
