--- a/src/app/modules/shop-module/components/settings/product/product-form/product-parameter-value-form/set-product-parameter-value/set-product-parameter-value.component.html
+++ b/src/app/modules/shop-module/components/settings/product/product-form/product-parameter-value-form/set-product-parameter-value/set-product-parameter-value.component.html
@@ -2,8 +2,8 @@
   <app-input
     formControlName="value"
     [errorCode]="errorCode('value') | translate"
-    [label]="'product-module.set-product-parameter-value-component.value' | translate"
+    [label]="'shop-module.product-form-component.parameters.value' | translate"
     [required]="true">
   </app-input>
-  <app-button [label]="'product-module.set-product-parameter-value-component.save' | translate"></app-button>
+  <app-button [label]="'shop-module.product-form-component.parameters.save' | translate"></app-button>
 </form>
