--- a/src/app/components/shared/modals/dialog-window/dialog-window.component.html
+++ b/src/app/components/shared/modals/dialog-window/dialog-window.component.html
@@ -3,7 +3,7 @@
     class="flex justify-center items-center w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur-sm z-50">
     <div class="bg-neutral-800 min-w-80 min-h-40 p-4 rounded-xl">
       <div class="flex justify-end">
-        <app-button-icon [icon]="IconType.xMark" (onClick)="this.onCloseDialog.emit(false)"></app-button-icon>
+        <app-button-icon [icon]="IconType.xMark" (onClick)="close()"></app-button-icon>
       </div>
       <div class="flex justify-center mb-4">
         <h1 class="text-xl font-semibold text-white">{{ title() }}</h1>
