--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -8,18 +8,20 @@
     }
   </div>
   <div class="flex-1 overflow-auto">
-    <table class="w-full">
+    <table class="w-full border-separate border-spacing-0">
       <thead>
-        <tr class="border-b border-neutral-700 text-left">
+        <tr class="text-left">
           @for (column of columns(); track column) {
             @switch (column.template) {
               @case (TableTemplate.action) {
-                <th class="p-4 text-neutral-100 float-right">
-                  <app-icon [iconName]="IconType.ellipsisHorizontal"></app-icon>
+                <th class="border-b border-neutral-700 w-29 p-4 text-neutral-100 bg-neutral-900 sticky top-0">
+                  <div class="flex justify-end w-25">
+                    <app-icon [iconName]="IconType.ellipsisHorizontal"></app-icon>
+                  </div>
                 </th>
               }
               @default {
-                <th class="p-4 text-neutral-100 font-semibold">
+                <th class="border-b border-neutral-700 p-4 text-neutral-100 font-semibold bg-neutral-900 sticky top-0">
                   {{ column.headerText | translate }}
                 </th>
               }
@@ -29,11 +31,11 @@
       </thead>
       <tbody (mouseleave)="rowId = ''">
         @for (item of items(); track item[idName()]) {
-          <tr class="border-b border-neutral-800 hover:bg-neutral-800" (mouseover)="rowId = item[idName()]">
+          <tr class="hover:bg-neutral-800" (mouseover)="rowId = item[idName()]">
             @for (column of columns(); track column) {
               @switch (column.template) {
                 @case (TableTemplate.action) {
-                  <td class="w-29 px-4 text-neutral-100">
+                  <td class="w-29 px-4 text-neutral-100 border-b border-neutral-800">
                     <div class="flex">
                       @if (rowId == item[idName()]) {
                         <app-table-action-field
@@ -51,12 +53,12 @@
                   </td>
                 }
                 @case (TableTemplate.boolean) {
-                  <td class="px-4 text-neutral-100">
+                  <td class="px-4 text-neutral-100 border-b border-neutral-800">
                     <app-table-boolean-field [value]="item[column.field]"></app-table-boolean-field>
                   </td>
                 }
                 @default {
-                  <td class="p-4 text-neutral-100 text-sm font-medium">
+                  <td class="p-4 text-neutral-100 text-sm font-medium border-b border-neutral-800">
                     {{ item[column.field] }}
                   </td>
                 }
