--- a/src/app/modules/shop-module/components/main/product/product-shop-list/product-shop-item/product-shop-item.component.html
+++ b/src/app/modules/shop-module/components/main/product/product-shop-list/product-shop-item/product-shop-item.component.html
@@ -36,7 +36,8 @@
     <div class="pt-2">
       <app-button
         [label]="'shop-module.product-item.component.add-to-basket' | translate"
-        (onClick)="addToBasket($event)"></app-button>
+        (onClick)="addToBasket($event)">
+      </app-button>
     </div>
   </div>
 </div>
