--- a/src/app/modules/shop-module/components/main/basket/basket.component.html
+++ b/src/app/modules/shop-module/components/main/basket/basket.component.html
@@ -1,16 +1,16 @@
 @if (basketItems().length == 0) {
-  <div class="flex flex-col items-center mt-20 bg-neutral-900 rounded-xl">
-    <div class="bg-gray-200 rounded-full p-2">
-      <app-icon class="block" [iconName]="IconType.shoppingBag" iconStyle="size-10"></app-icon>
-    </div>
-    <h1 class="text-2xl">{{ 'shop-module.basket-component.basket-is-empty' | translate }}</h1>
+  <div class="flex flex-col items-center mt-20 bg-neutral-900 rounded-xl p-4">
+    <app-icon class="block text-white" [iconName]="IconType.shoppingBag" iconStyle="size-10"></app-icon>
+    <h1 class="text-white text-2xl">{{ 'shop-module.basket-component.basket-is-empty' | translate }}</h1>
     <div>
       @if (!(userService.user$ | async)) {
         <span>
-          <a class="underline hover:text-blue-600" [routerLink]="loginPath">
+          <a class="text-white underline hover:text-blue-600" [routerLink]="loginPath">
             {{ 'shop-module.basket-component.log-in' | translate }}
           </a>
-          <span>{{ 'shop-module.basket-component.to-check-our-products-or-get-inspired' | translate }}</span>
+          <span class="text-white">
+            {{ 'shop-module.basket-component.to-check-our-products-or-get-inspired' | translate }}
+          </span>
         </span>
       } @else {
         <span>{{ 'shop-module.basket-component.check-our-product-and-get-inspired' | translate }}</span>
